# huashu

./: .gitattributes  .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  启动话树(开发模式).bat
docs/superpowers/specs/: 2026-04-07-story-mode-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/canvas/: CanvasView.tsx  ChatNodeComponent.tsx  (+6 more)
src/hooks/: useAttachments.ts  useConfirm.tsx  useDragDrop.ts  useKeyboardShortcuts.ts
src/lib/: attachment-utils.ts  tree-layout.ts  tree-utils.ts
src/services/: ai-request-body.ts  ai-service.ts  attachment-data.ts  attachment-migration.ts  attachment-paths.ts  attachment-preview.ts  attachment-service.ts  config-service.ts  context-service.ts  conversation-service.ts  document-parser.ts  embedding-service.ts  export-service.ts  file-service.ts  image-generation-service.ts  image-generation-utils.ts  image-prompt-service.ts  index.ts  migration-service.ts  portable-service.ts  project-service.ts  rag-service.ts  search-service.ts  story-service.ts  text-splitter.ts  token-service.ts  vector-store.ts
src/stores/: app-store.ts  config-store.ts  conversation-store.ts  edit-store.ts  project-store.ts
src/types/: config.ts  conversation.ts  index.ts  knowledge-base.ts  node.ts  project.ts  story.ts
tests/: ai-request-body.test.ts  attachment-data.test.ts  attachment-paths.test.ts  attachment-preview.test.ts  image-generation-utils.test.ts
(+14 files in other folders)
