[package]
name = "huashu"
version = "0.1.0"
description = "话树 - 基于树状结构的AI对话管理桌面应用"
authors = ["you"]
edition = "2021"

[lib]
name = "huashu_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
