[package]
name = "huashu"
version = "0.3.1"
description = "璇濇爲 - 鍩轰簬鏍戠姸缁撴瀯鐨凙I瀵硅瘽绠＄悊妗岄潰搴旂敤"
authors = ["you"]
edition = "2021"

[lib]
name = "huashu_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
